<resources>
     <!--generales-->
    <string name="app_name">DOM</string>
    <string name="date_separator">/</string>
    <string name="day_format">dd</string>
    <string name="month_format">mm</string>
    <string name="year_format">aaaa</string>
    <string name="aceptar">Aceptar</string>
    <string name="compulsory_marker">*</string>
    <string name="double_dots">:</string>
    <string name="plus">+</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="blank_hint"> </string>
    <string name="comma">,</string>
    <string name="bracket_open">(</string>
    <string name="bracket_close">)</string>
    <string name="percent">%</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="cad_date">Fecha de caducidad</string>
    <string name="login">Inicia sesión</string>
    <string name="settings">Configuración</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>

    <!--activity_escaneado.xml-->
    <string name="scan_title">Escanear</string>
    <string name="cod_leido">Código leído</string>
    <string name="pie_layout">Sponsored by KaveHome</string>

    <!--activity_main.xml-->
    <string name="welcome">Hola</string>
    <string name="camera">Cámara</string>
    <string name="list">Lista de productos</string>
    <string name="shopping">Compras online</string>
    <string name="diet">Dietas sugeridas</string>

    <!--caducidad.xml-->
    <string name="cad_title">Añade la cantidad y la fecha de caducidad:</string>
    <string name="no_cad_date">No tiene fecha de caducidad</string>
    <string name="quantity">Cantidad</string>

    <!--card_view.xml-->

    <!--pantalla_inicial.xml-->
    <string name="proj_name">BATLER CENTER</string>
    <string name="pie_inicio">A KaveHome Project</string>

    <!--product_info.xml-->
    <string name="rem_quantity">Cantidad restante</string>
    <string name="nutri_info">Información nutricional</string>
    <string name="ingredients">Ingredientes</string>
    <string name="grasas">Grasas</string>
    <string name="grasas_sat">Grasas saturadas</string>
    <string name="hid_carb">Hidratos de carbono</string>
    <string name="azucares">Azúcares</string>
    <string name="fibra">Fibra alimentaria</string>
    <string name="proteinas">Proteínas</string>
    <string name="sal">Sal</string>
    <string name="gramos">g</string>
    <string name="ingredientes">Ingredientes</string>

    <!--productlist.xml-->
    <string name="my_products">Mis productos</string>
    <string name="available">Productos disponibles</string>
    <string name="prod_commands">Pulsa un producto para más información, mantén para eliminarlo</string>

    <!--server_test.xml-->
    <string name="conectar">Conectar</string>

    <!--settings.xml-->
    <string name="log_out">Cerrar sesión</string>
    <string name="info_condition_politics">Condiciones y política</string>
    <string name="contact_email">soporte@dom.com</string>
    <string name="contact_phone">601124308</string>
    <string name="contact_address">C/ Jordi Girona, 1</string>
    <string name="web_page">Página web</string>
    <string name="contact_web">dom.domrav.net</string>

    <!--user_login.xml-->
    <string name="registrar">Regístrate</string>

    <!--user_register.xml-->
    <string name="register_title">Datos del usuario</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="birth_date">Fecha de nacimiento</string>
    <string name="country_prefix">Prefijo telefónico</string>
    <string name="phone_format">000000000</string>
    <string name="confirm_password">Repite la contraseña</string>
    <string name="have_user">¿Ya tienes una cuenta?</string>

    <!--user_register.xml-->
    <string name="cond_pol_title">Condiciones de uso y política de privacidad</string>
    <string name="cond_pol_text">DOM está especialmente sensibilizada en la protección de los datos de los USUARIOS de los servicios a los que se accede a través de su aplicación. Mediante la presente Política de Privacidad (en adelante, la Política) DOM informa a los USUARIOS de la APP: LOS DATOS relacionados con la creación de usuarios, quedan sujetos del tratamiento y usos a los que se someten los datos de carácter personal que se recaban en la app, bajo confirmación y aceptación de los propios usuarios con el fin de que decidan, libre y voluntariamente, si desean facilitar la información solicitada.\n\nDOM se reserva la facultad de modificar esta Política con el objeto de adaptarla a novedades legislativas, criterios jurisprudenciales, prácticas del sector, o intereses de la entidad. Cualquier modificación en la misma será anunciada con la debida antelación, a fin de que se tenga perfecto conocimiento de su contenido.\nCiertos servicios prestados en el portal pueden contener condiciones particulares con previsiones en materia de protección de Datos Personales. De ellos puedes informarte en los correspondientes apartados.\n\nTITULARIDAD DEL TRATAMIENTO\nEn dichos supuestos, los datos recabados por DOM serán incorporados a ficheros titularidad de DOM, debidamente inscritos en el Registro General de Protección de Datos.\n\nUSOS Y FINALIDADES\nLa finalidad de la recogida y tratamiento de los datos personales es la gestión, prestación y personalización de los servicios y contenidos del mismo que el USUARIO utilice y de la cual se informará en cada apartado.\n\nCOMUNICACIÓN DE LOS DATOS\nLos datos recabados a través de la APP sólo serán cedidos en aquellos casos en que expresamente se informe de ello al USUARIO.\n\nACTUALIZACIÓN DE LOS DATOS\nCon el fin de que los datos obrantes en nuestras bases de datos siempre correspondan a tu situación real deberás mantenerlos actualizados, bien actualizándolos tú directamente en los casos en que ello sea posible bien comunicándolo al departamento correspondiente.\n\nUTILIZACIÓN DE COOKIES\nCon el objeto de proteger la intimidad de los usuarios de su página web DOM no emplea cookies cuando los mismos navegan por la misma.\n\nSEGURIDAD DE LOS DATOS\nDOM ha adoptado en su sistema de información las medidas técnicas y organizativas legalmente requeridas, a fin de garantizar la seguridad y confidencialidad de los datos almacenados, evitando así, en la medida de lo posible, su alteración, pérdida, tratamiento o acceso no autorizado.\nDERECHOS DE LOS USUARIOS\nEn todo caso podrás acceder a tus datos, rectificarlos, cancelarlos y en su caso, oponerte a su tratamiento:\na) bien mediante la APP dándose de baja en nuestros servicios.\nb) bien mandando un mensaje al apartado de contactos de la aplicación.
</string>

</resources>